Refactored GeoPatternsSVG: Removed element decl in child class